test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/assign_to_array_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[49]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(dim2)
  [
  const int(1)
  ]
  [
  const int(2)
  ]
  =
  {
  {
  const int(1)
  ,
  const int(2)
  }
  }
  ;
  int
  identifier(dim)
  [
  const int(2)
  ]
  =
  {
  const int(3)
  ,
  const int(4)
  }
  ;
  identifier(dim2)
  [
  const int(0)
  ]
  =
  identifier(dim)
  ;
  return
  identifier(dim)
  [
  const int(0)
  ]
  ;
  }
